--- a/laurentperez.fr/talks/css1/index.html
+++ b/laurentperez.fr/talks/css1/index.html
@@ -221,8 +221,8 @@
 				<p><img src="rp.png" alt=""></p>
 				<p class="fragment fade-up">Dû au switch de Gecko vers Servo à partir de 2017, 2 moteurs</p>
 				<p class="fragment fade-up">On veut de la diversité dans les moteurs de rendu, Servo est top</p>
-				<p class="fragment fade-up">Pas de One Blink to rule them all</p>
-				<small>FF Worklet a bougé mi Août : <a href="https://bugzilla.mozilla.org/show_bug.cgi?id=1315239">https://bugzilla.mozilla.org/show_bug.cgi?id=1315239</a></small>
+				<p class="fragment fade-up">Pas de One Chrome to rule them all... Apple interdit autre moteur que WebKit</p>
+				<small>FF Worklet a bougé &lt; 1 mois : <a href="https://bugzilla.mozilla.org/show_bug.cgi?id=1315239">https://bugzilla.mozilla.org/show_bug.cgi?id=1315239</a></small>
 				<small>en Q3 2019 tout Houdini marqué en Enhancement Prio 3, les tickets dataient de 2017, la Worklet est un pilier des API</small>
 			</section>
 			
@@ -265,6 +265,7 @@ CSS.layoutWorklet.addModule(...);
 				</code>
 </pre>	
 <p class="fragment fade-up">et les <em>Worklets</em> ses assistant(e)s</p>
+<p class="fragment fade-up">... une AudioWorklet est dans Firefox et Chrome  - hors Houdini</p>
 			</section>
 
 			<section>
