--- a/laurentperez.fr/talks/css1/index.html
+++ b/laurentperez.fr/talks/css1/index.html
@@ -269,6 +269,16 @@ CSS.layoutWorklet.addModule(...);
 			</section>
 
 			<section>
+				<p>Pour toutes les d&eacute;mos qui vont suivre </p>
+				<p>Activation des flags beta Web/CSS requise</p>
+				<p><small>Chrome Canary --enable-blink-features=GroupEffect
+					<br>
+					Safari Technology Preview
+				</small></p>
+				<img src="cflags.png" width="400px" alt="">
+				<img src="sflags.png" width="400px" alt="">
+			</section>
+			<section>
 				<h2>🔑 Properties/Values API 🔑</h2>
 				<p >Enfin (!) du typage dans des variables CSS perso</p>
 				<small>... on rappelle BEM/SASS/Less pour une structure de classes maintenable</small>
