--- a/laurentperez.fr/talks/webkit/index.html
+++ b/laurentperez.fr/talks/webkit/index.html
@@ -596,7 +596,7 @@
 			</section>
 
 			<section>
-				<h3>🖼️  On ne relayout pas tout. Seulement les containing blocks avec dirties (sales gosses) 🖼️ </h3>
+				<h3>🖼️ On ne relayout pas tout. Seulement les containing blocks avec dirties (sales gosses) 🖼️ </h3>
 				<p>Le layout n'est pas figé : au "hit testing" - sur quoi est le pointeur - un scroll, survol :hover, un focus, un touch JS peut restyler.</p>
 				<p>Le <em>RenderStyle</em> recalculé <em>ne change pas toujours</em> le layout : color NON, position/display/height/width OUI. </p>
 				<small><a href="https://csstriggers.com/">https://csstriggers.com/</a></small>
@@ -628,11 +628,11 @@
 			</section>
 
 			<section>
-				<h3>Etape du Compositing</h3>
+				<h3>✏️ Etape du Compositing 🎨</h3>
 				<p>Intermédiaire entre le layout et la peinture</p>
-				<p>Le moteur compose les calques dans la <em>Main</em> Thread mais les peint séparément dans une autre <em>Compositor</em> Thread</p>
-				<p>Car la Main thread peut ralentir : ex : miner du bitcoin en JS, avoir du HTML qui layout() trop souvent</p>
-				<p>On ne veut pas ralentir le compositing, la Compositor Thread bénéficie aussi d'optmisations (ex: cache, GPU)</p>
+				<p>Le moteur compose et range les calques dans la <em>Main</em> Thread mais les peint séparément dans une autre <em>Compositor</em> Thread</p>
+				<p>... car la <em>Main</em> thread peut ralentir : ex : miner du bitcoin en JS, avoir du HTML qui layout() trop souvent au scroll</p>
+				<p>On ne veut pas ralentir le compositing, la Compositor Thread bénéficie d'optimisations dédiées dessin et animation (ex: cache, effets GPU, projections spatiales, interpolations)</p>
 			</section>
 
 			<section>
@@ -657,19 +657,21 @@
 
 			<section>
 				<h3>Oh non, encore des specs !</h3>
-				<small>On peint récursif par piles de stacking context et pas toujours par l'ordre du HTML - ex: z-index</small>
+				<small>On peint récursif par piles (stacking context) et pas <em>toujours</em> par l'ordre du flow HTML - ex: z-index</small>
 				<ol>
 					<li>on peint background (color/img/col/row/cell/grid-item), borders de l'element</li>
 					<li>on peint dans l'ordre du flow : enfants positionnés en zindex &lt; 0</li>
 					<li>on peint dans l'ordre du flow : les blocks non inline, non positionnés</li>
 					<li>on peint dans l'ordre du flow : les floats non positionnés<!-- (genere sc) --></li>
 					<li>on peint dans l'ordre du flow : les inlines non positionnés, tables et inline blocks<!-- (generent un sc) --></li>
-					<li>on peint le sc de l'enfant non positionné puis positionné à zindex: 0 (= fixed)<!-- (genere sc) --></li>
-					<li>on peint le sc de l'enfant opacity &lt; 1 (cf filtres photoshop)</li>
-					<li>on peint le sc de l'enfant avec CSS transform/filter (cf calques photoshop)</li>
-					<li>on peint le sc de l'enfant positionné zindex &gt; 0 (idem)</li>
+					<li>(pivot vers positionnés) on peint le sc de l'enfant positionné à zindex: 0<!-- (genere sc) --></li>
+					<li>on peint le sc de l'enfant opacity &lt; 1 (transparence)</li>
+					<li>on peint le sc de l'enfant avec CSS transform/filter (effets)</li>
+					<li>on peint le sc de l'enfant positionné zindex &gt; 0 (au dessus)</li>
 					<!-- <li>on passe au sc suivant</li> -->
 				</ol>
+				<p>9 étapes, suite austère mais logique et optimisée : CSS 2 a créé ces specs, les positions, le z-index - avant, on utilisait des images vides</p>
+				<small>pour chaque pile : fonds et bordures, enfants au fond possiblement masqués, les blocks in flow, les floats in flow, les inlines in flow car un float les pousse, on bascule vers les positionnés, les 0, les transparents/transformés, les &gt; 0</small>
 			</section>
 
 			<section>
