--- a/laurentperez.fr/talks/webkit/index.html
+++ b/laurentperez.fr/talks/webkit/index.html
@@ -233,7 +233,7 @@
 				<section>
 					<ul>
 						<li>2016/19 CSS4, CSS Houdini, Progressive WebApps, WebPayment, WebAssembly, Animations API, WebVR, ... </li>
-						<li>Juin 2019 Les groupes de standardisation HTML du W3C (Berners-Lee, lents, non lucratif) et du WhatWG (fabricants, rapides, pognon) fusionnent</li>
+						<li>Juin 2019 Les groupes de standardisation HTML du W3C (Berners-Lee, 🐢, non lucratif) et du WhatWG (fabricants, 🐇, pognon) fusionnent</li>
 						<li>2020 "Year of Privacy" pour tous les fabricants 🔒 (Intelligent Tracking Prevention)</li>
 						<li>Manifestes des fabricants pour restreindre les Cookies tiers et techniques de pistage</li>
 						<li>Retombées des affaires Snowden, Cambridge Analytica, abus privacy divers ... RGPD </li>
@@ -251,7 +251,7 @@
 						<li>Blink : <a href="https://www.chromestatus.com/features">https://www.chromestatus.com/features</a></li>
 						<li>Edge : <a href="https://developer.microsoft.com/en-us/microsoft-edge/platform/status/">https://developer.microsoft.com/en-us/microsoft-edge/platform/status</a></li>
 						<li>Safari : <a href="https://developer.apple.com/safari/technology-preview/">https://developer.apple.com/safari/technology-preview</a></li>
-						<li>nb : Apple par Culte du Secret ne commentent jamais en _détails_ sur qu'ils vont ajouter pour iOS/iPadOS, les curieux.ses peuvent lire les commits sign&eacute;s des devs @apple.com</li>
+						<li>nb : Apple par <em>Culte du Secret</em> ne commentent jamais en _détails_ sur qu'ils vont ajouter pour iOS/iPadOS, les curieux.ses peuvent lire les commits sign&eacute;s des devs @apple.com</li>
 						<small><a href="https://github.com/WebKit/webkit/commits/master">
 						https://github.com/WebKit/webkit/commits/master</a><br/>
 						</small>
@@ -269,12 +269,11 @@
 				</section>
 
 				<section>
-					<h3>C'est</h3>
-					<h3>Open</h3>
-					<h3>Source</h3>
-					<p>Blink, WebKit, Gecko/Servo</p>
+					<h3>C'est open source</h3>
+					<p>Si des fabricants qui font des revenus sont derrière Blink, WebKit, Gecko/Servo, le code reste libre</p>
 					<p>Bientôt Huawei via un fork ?</p>
-					<p>C'est pas /si/ difficile de contribuer (DevTools/Inspector est la porte d'entrée la plus simple)</p>
+					<p>Les fabricants partagent une suite de tests du W3C : <a href="http://github.com/w3c/web-platform-tests">WPT Web Platform Tests</a></p>
+					<p>C'est pas /si/ difficile de contribuer (DevTools/WebInspector est la porte d'entrée la plus simple)</p>
 					<p>... petite plongée dans WebKit</p>
 				</section>
 
@@ -596,7 +595,7 @@
 			</section>
 
 			<section>
-				<h3>🖼️ On ne relayout pas tout. Seulement les containing blocks avec dirties (sales gosses) 🖼️ </h3>
+				<h3>🖼️ On ne relayout pas tout. Seulement les containing blocks avec dirties (sales gosses) </h3>
 				<p>Le layout n'est pas figé : au "hit testing" - sur quoi est le pointeur - un scroll, survol :hover, un focus, un touch JS peut restyler.</p>
 				<p>Le <em>RenderStyle</em> recalculé <em>ne change pas toujours</em> le layout : color NON, position/display/height/width OUI. </p>
 				<small><a href="https://csstriggers.com/">https://csstriggers.com/</a></small>
